update SocketConnection